--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "latest",
     "uikit": "^3.3.1",
+    "vee-validate": "^3.2.5",
     "vue": "2.6.11",
     "vue-material": "1.0.0-beta-11",
     "vue-router": "^3.1.5"
