--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "uikit": "^3.3.1",
     "vee-validate": "^3.2.5",
     "vue": "2.6.11",
-    "vue-material": "1.0.0-beta-11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@babel/cli": "7.8.3",
