--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/svetlyi/vuejs-chat",
   "dependencies": {
     "axios": "^0.19.2",
+    "highcharts": "^8.0.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "latest",
     "uikit": "^3.3.1",
